compilateurDeca/src/test/deca/syntax/valid/objet/this.deca
// Description:
//   This sélection explicite + appel
// Resultats:
//    Succes
//
// Historique:
//    cree le 15/01/2026
class A {
    int x;
    int getX() { return this.x; }
    int add(int a) { return this.getX() + a; }
}
{
}
