compilateurDeca/src/test/deca/syntax/invalid/objet/lbrace.deca
// Description:
//  Classe sans accolade ouvrante 
// Resultats:
//    Echec (erreur de syntaxe)
//
// Historique:
//    cree le 15/01/2026

class A
    int x;
}
{
}
